--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ MAIN
 }
 
 .jumbotron .container {
+    /* debug */
     border: 2px solid black;
 }
 
@@ -39,4 +40,53 @@ MAIN
     height: 100px;
     background-color: bisque;
     border: 1px solid brown;
+}
+
+/* SECONDA SEZIONE - ABOUT */
+#about {
+    background-color: #1ABC9C;
+}
+
+#about .h2 {
+    /* debug */
+    height: 40px;
+}
+
+#about .container .row .col {
+    /* debug */
+    background-color: aqua;
+    height: 100px;
+    border: 1px solid lightblue;
+}
+
+/* TERZA SEZIONE - CONTACT */
+#contact .container {
+    /* debug */
+    border: 2px solid black;
+}
+
+#contact .container .flex-column .col {
+    /* debug */
+    flex-basis: 50px;
+    border: 1px solid coral;
+    background-color: aquamarine;
+}
+
+/**********
+FOOTER
+**********/
+footer .footer-top {
+    background-color: #3A546D;
+}
+
+footer .footer-top .container .row .col {
+    /* debug */
+    height: 50px;
+    border: 1px solid lightgray;
+}
+
+footer .footer-bottom {
+    background-color: #2C3E50;
+    /* debug */
+    height: 60px;
 }
