--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,43 @@
+/* INIZIO CLASSI DI DEBUG DA RIMUOVERE */
+
+header,
+section {
+    border: 2px dashed green;
+}
+
+#header {
+    min-height: 80px;
+    border: 2px dashed green;
+}
+
+[class*="container"] {
+    min-height: 20px;
+    border: 2px dashed orange;
+}
+
+[class*="col"],
+#jumbotron>.box {
+    min-height: 80px;
+    border: 2px dashed aqua;
+}
+
+.box.box-img {
+    height: 300px;
+    width: 300px;
+}
+
+.box.box-icon {
+    height: 10px;
+    width: 500px;
+}
+
+[class*="col"]>.box {
+    min-height: 80px;
+    border: none;
+}
+
+/* FINE CLASSI DI DEBUG DA RIMUOVERE */
+
 /**********
 HEADER
 **********/
@@ -7,7 +47,7 @@ header {
     height: 80px;
 }
 
-header .col {
+header .col-auto {
     /* debug */
     height: 60px;
     border: 2px solid black;
@@ -18,20 +58,8 @@ MAIN
 **********/
 
 /* JUMBOTRON */
-.jumbotron {
+#jumbotron {
     background-color: #1ABC9C;
-}
-
-.jumbotron .container {
-    /* debug */
-    border: 2px solid black;
-}
-
-.jumbotron .container .flex-column .col {
-    /* debug */
-    flex-basis: 100px;
-    border: 1px solid red;
-    background-color: aquamarine;
 }
 
 /* PRIMA SEZIONE - PORTFOLIO */
