--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,5 @@
 /* INIZIO CLASSI DI DEBUG DA RIMUOVERE */
-
-header,
-section {
-    border: 2px dashed green;
-}
-
-#header {
-    min-height: 80px;
+/* section {
     border: 2px dashed green;
 }
 
@@ -34,87 +27,91 @@ section {
 [class*="col"]>.box {
     min-height: 80px;
     border: none;
-}
+} */
 
 /* FINE CLASSI DI DEBUG DA RIMUOVERE */
 
 /**********
 HEADER
 **********/
-header {
-    background-color: #2C3E50;
-    /* debug */
-    height: 80px;
+.navbar-dark {
+    background-color: #2c3e50 !important;
 }
 
-header .col-auto {
-    /* debug */
+/* header {
+    background-color: #2C3E50;
+    debug
+    height: 80px;
+} */
+
+/* header .col-auto {
+    debug
     height: 60px;
     border: 2px solid black;
-}
+} */
 
 /**********
 MAIN
 **********/
 
 /* JUMBOTRON */
-#jumbotron {
+/* #jumbotron {
     background-color: #1ABC9C;
-}
+} */
 
 /* PRIMA SEZIONE - PORTFOLIO */
-#portfolio .container .row .col {
-    /* debug */
+/* #portfolio .container .row .col {
+    debug
     height: 100px;
     background-color: bisque;
     border: 1px solid brown;
-}
+} */
 
 /* SECONDA SEZIONE - ABOUT */
-#about {
+/* #about {
     background-color: #1ABC9C;
-}
+} */
 
-#about .h2 {
-    /* debug */
+/* #about .h2 {
+    debug
     height: 40px;
-}
+} */
 
-#about .container .row .col {
-    /* debug */
+/* #about .container .row .col {
+    debug
     background-color: aqua;
     height: 100px;
     border: 1px solid lightblue;
-}
+} */
 
 /* TERZA SEZIONE - CONTACT */
-#contact .container {
-    /* debug */
+/* #contact .container {
+    debug
     border: 2px solid black;
-}
+} */
 
-#contact .container .flex-column .col {
-    /* debug */
+/* #contact .container .flex-column .col {
+    debug
     flex-basis: 50px;
     border: 1px solid coral;
     background-color: aquamarine;
-}
+} */
 
 /**********
 FOOTER
 **********/
-footer .footer-top {
+/* footer .footer-top {
     background-color: #3A546D;
-}
+} */
 
-footer .footer-top .container .row .col {
-    /* debug */
+/* footer .footer-top .container .row .col {
+    debug
     height: 50px;
     border: 1px solid lightgray;
-}
+} */
 
-footer .footer-bottom {
+/* footer .footer-bottom {
     background-color: #2C3E50;
     /* debug */
-    height: 60px;
-}
+    /* height: 60px; */
+/* } */ 
