--- a/css/style.css
+++ b/css/style.css
@@ -32,32 +32,54 @@
 /* FINE CLASSI DI DEBUG DA RIMUOVERE */
 
 /**********
+RESETS
+**********/
+ul {
+    list-style-type: none;
+}
+
+
+/**********
 HEADER
 **********/
 .navbar-dark {
     background-color: #2c3e50 !important;
 }
-
-/* header {
-    background-color: #2C3E50;
-    debug
-    height: 80px;
-} */
-
-/* header .col-auto {
-    debug
-    height: 60px;
-    border: 2px solid black;
-} */
-
 /**********
 MAIN
 **********/
 
 /* JUMBOTRON */
-/* #jumbotron {
+#jumbotron {
     background-color: #1ABC9C;
-} */
+    color: #FFF;
+}
+
+#jumbotron .box-img img {
+    width: 12rem;
+}
+
+.box.box-icon {
+    height: 4rem;
+    line-height: 4rem;
+}
+
+.box.box-icon .line {
+    display: inline-block;
+    width: 5rem;
+    height: .2rem;
+    background-color: #FFF;
+    vertical-align: middle;
+}
+
+.box.box-icon .icon {
+    vertical-align: middle;
+    display: inline-block;
+} 
+
+#jumbotron ul > li {
+    display: inline-block;
+}
 
 /* PRIMA SEZIONE - PORTFOLIO */
 /* #portfolio .container .row .col {
