--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@ ul {
     list-style-type: none;
 }
 
+img {
+    max-width: 100%;
+}
 
 /**********
 HEADER
@@ -68,7 +71,7 @@ MAIN
     display: inline-block;
     width: 5rem;
     height: .2rem;
-    background-color: #FFF;
+    background-color: currentColor;
     vertical-align: middle;
 }
 
@@ -82,12 +85,13 @@ MAIN
 }
 
 /* PRIMA SEZIONE - PORTFOLIO */
-/* #portfolio .container .row .col {
-    debug
-    height: 100px;
-    background-color: bisque;
-    border: 1px solid brown;
-} */
+#portfolio {
+   color: #2C3E50;
+}
+
+#portfolio .box.box-img img {
+    border-radius: 1rem;
+}
 
 /* SECONDA SEZIONE - ABOUT */
 /* #about {
